@@ -1,6 +1,10 @@
 CONFIG = YMDP::Configuration::Config.new unless defined?(CONFIG)
 SERVERS = YMDP::Configuration::Servers.new unless defined?(SERVERS)
 
+@content_variables = YAML.load_file("#{BASE_PATH}/config/content.yml")
+
+@jslint_settings = File.read("#{BASE_PATH}/config/jslint_settings.js") if File.exists?("#{BASE_PATH}/config/jslint_settings.js")
+
 YMDP::Base.configure do |config|
   config.username = CONFIG["username"]
   config.password = CONFIG["password"]
@@ -13,5 +17,9 @@ YMDP::Base.configure do |config|
   config.add_path(:base_path, BASE_PATH)
   config.servers = SERVERS
   
-  config.load_content_variables("config.yml")
+  config.content_variables = @content_variables
+end
+
+YMDP::Validator::JavaScript.configure do |config|
+  config.jslint_settings = @jslint_settings
 end
